# earthcarekit

./: .gitattributes  .gitignore  .zenodo.json  404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  version_helper.py
.github/workflows/: ci.yml  documentation.yml  release.yaml
api_documentation/: index.html
api_ref/: index.html
api_ref/calval/: index.html
api_ref/color/: index.html
api_ref/colormap/: index.html
api_ref/constants/: index.html
api_ref/data/: index.html
api_ref/download/: index.html
api_ref/filter/: index.html
api_ref/geo/: index.html
api_ref/geo_distance/: index.html
api_ref/geo_grid/: index.html
api_ref/np_array_utils/: index.html
api_ref/overpass/: index.html
api_ref/plot/: index.html
api_ref/read/: index.html
api_ref/site/: index.html
api_ref/stats/: index.html
api_ref/typing/: index.html
api_ref/utils/: index.html
api_ref/utils_dict/: index.html
api_ref/utils_math/: index.html
api_ref/utils_numpy/: index.html
api_ref/utils_path/: index.html
api_ref/utils_xarray/: index.html
api_ref/xarray_utils/: index.html
cli/ecdownload/: index.html
cli/ecquicklook/: index.html
cli_tools/: index.html
colormaps/: index.html
docs/: api_documentation.md  api_ref.md  cli_tools.md  colormaps.md  ecdownload.md  ecquicklook.md  index.md  install.md  setup.md  supported_products.md  tutorial_basics.md  tutorial_profile_data.md  tutorials.md
docs/api_ref/: calval.md  color.md  colormap.md  constants.md  data.md  download.md  filter.md  frame.md  geo.md  geo_distance.md  geo_grid.md  np_array_utils.md  overpass.md  plot.md  profile.md  read.md  site.md  stats.md  swath.md  typing.md  utils.md  utils_dict.md  utils_math.md  utils_numpy.md  utils_path.md  utils_xarray.md  xarray_utils.md
docs/cli/: ecdownload.md  ecquicklook.md
docs/stylesheets/: extra.css
docs/tutorials/: colormaps.md  maps.md  plot_customization.md  profiles.md  quickstart.md  xmet_rebin_along_track.md
earthcarekit/: __init__.py
earthcarekit/calval/: __init__.py  _compare_bsc_ext_lr_depol.py  _perform_anom_depol_statistics.py
earthcarekit/color/: __init__.py  _color.py  _registry.py  _typing.py
earthcarekit/colormap/: __init__.py  _cmap.py  _combine.py  _combine_cmaps.py  _combine_mpl_cmaps.py  _get_cmap.py  _plotly.py  _rename.py  _shift_cmap.py  _shift_mpl_cmap.py  _typing.py  atl_tc.py  (+50 more)
ecdownload/: index.html
ecquicklook/: index.html
install/: index.html
search/: search_index.json
setup/: index.html
supported_products/: index.html
tests/: test_imports.py  test_smoke.py
tutorial_basics/: index.html
tutorial_profile_data/: index.html
tutorials/: index.html
(+463 files in other folders)
